# l4bhop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  l4bhop.sln  vcpkg-configuration.json  vcpkg.json
extlibs/: CMakeLists.txt
l4bhop/: Client.h  LocalPlayer.h  Vec3.h  dllmain.cpp  l4bhop.vcxproj  l4bhop.vcxproj.filters  l4d2.h  main.cpp
l4bhop/Utils/: memory.cpp  memory.h
src/: CMakeLists.txt  main.cpp
src/SDK/: CLocalPlayer.cpp  CLocalPlayer.h  CMakeLists.txt  CUserCmd.h  local_player.cpp  local_player.hpp  user_cmd.hpp
src/utils/: CMakeLists.txt  memory.cpp  memory.h
vmprotect_sdk/lib/: VMProtectSDK32.lib
